Did a ton of stuff. Honestly I have no clue. I just did everything I had to on the criteria.

--- a/commonnftterms.html
+++ b/commonnftterms.html
@@ -1,128 +1,156 @@
 <!DOCTYPE html>
 <html lang="en">
-   <head>
-      <meta charset="UTF-8" />
-      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <link rel="preconnect" href="https://fonts.googleapis.com" />
-      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-      <link
-         href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@200&display=swap"
-         rel="stylesheet"
-         />
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-      <link rel="stylesheet" href="main.css" />
-      <link rel="stylesheet" href="terms.css" />
-      <link rel="stylesheet" href="blog.css" />
-      <title>Crypted.</title>
-   </head>
-   <body>
-      <nav class="nav">
-         <div class="nav-bar">
-            <div class="nav-left">
-               <div class="brand-name nav-item nav-item-left" onclick="location.href='index.html';">
-                  Crypted.
-               </div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@200&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/terms.css" />
+    <link rel="stylesheet" href="css/blog.css" />
+    <title>Crypted. | Common NFT Terms</title>
+    <link rel="icon" type="image/x-icon" href="images/crypted.ico">
+  </head>
+  <body>
+    <nav class="nav">
+      <div class="nav-bar">
+        <div class="nav-left">
+          <div class="brand-name nav-item nav-item-left" onclick="location.href='index.html';"> Crypted. </div>
+        </div>
+        <div class="nav-right">
+          <div class="nav-item nav-item-right dropdown" onclick="location.href='aboutus.html';"> About Us <div class="dropdown-content">
+              <a href="contactus.html">Contact Us</a>
             </div>
-            <div class="nav-right">
-               <div class="nav-item nav-item-right dropdown" onclick="location.href='aboutus.html';">
-                  About Us
-                  <div class="dropdown-content">
-                     <a href="contactus.html">Contact Us</a>
-                  </div>
-               </div>
-               <div class="nav-item nav-item-right dropdown" onclick="location.href='learnnfts.html';">
-                  Learn NFTs
-                  <div class="dropdown-content">
-                     <a href="whatarenfts.html">What are NFTs?</a>
-                     <a href="commonnftterms.html">Common NFT Terms</a>
-                     <a href="commonnftscams.html">Common NFT Scams</a>
-                     <a href="thisweekinnfts.html">This Week in NFTs</a>
-                  </div>
-               </div>
-               <div class="nav-item nav-item-right dropdown" onclick="location.href='learncrypto.html';">
-                  Learn Crypto
-                  <div class="dropdown-content">
-                     <a href="whatarecryptocurrencies.html">What are Cryptocurrencies?</a>
-                     <a href="commoncryptoterms.html">Common Crypto Terms</a>
-                     <a href="commoncryptoscams.html">Common Crypto Scams</a>
-                  </div>
-               </div>
+          </div>
+          <div class="nav-item nav-item-right dropdown" onclick="location.href='learnnfts.html';"> Learn NFTs <div class="dropdown-content">
+              <a href="whatarenfts.html">What are NFTs?</a>
+              <a href="commonnftterms.html">Common NFT Terms</a>
+              <a href="commonnftscams.html">Common NFT Scams</a>
+              <a href="thisweekinnfts.html">This Week in NFTs</a>
             </div>
-         </div>
-      </nav>
-      <div class="content">
-         <div class="blog">
-            <div class="blog-header">
-               <h1 id="blog-header-text">Common NFT Terms</h1>
+          </div>
+          <div class="nav-item nav-item-right dropdown" onclick="location.href='learncrypto.html';"> Learn Crypto <div class="dropdown-content">
+              <a href="whatarecryptocurrencies.html">What are Cryptocurrencies?</a>
+              <a href="commoncryptoterms.html">Common Crypto Terms</a>
+              <a href="commoncryptoscams.html">Common Crypto Scams</a>
             </div>
-            <div id="blog-sharebar">
-               <a> Share: </a>
-               <a href="https://www.facebook.com/" target="_blank" class="fa fa-facebook"></a>
-               <a href="https://twitter.com/" target="_blank" class="fa fa-twitter"></a>
-               <a href="https://www.linkedin.com/" target="_blank" class="fa fa-linkedin"></a>
-               <a href="https://www.reddit.com/" target="_blank" class="fa fa-reddit"></a>
-            </div>
-            <table class="terms">
-               <tr>
-                  <td class="term">Cryptocurrency</td>
-                  <td class="definition">
-                     Digital money which uses encryption and consensus algorithms to
-                     regulate the generation of coins/tokens and transfer of funds.
-                     Cryptocurrencies are generally decentralized, operating
-                     independently of central authorities.
-                  </td>
-               </tr>
-            </table>
-            <a
-               class="definition_source"
-               href="https://comptiacdn.azureedge.net/webcontent/docs/default-source/research-reports/07576-blockchain-glossary-of-terms-r3.pdf"
-               >Source</a
-               >
-         </div>
+          </div>
+        </div>
       </div>
-      <footer class="footer">
-        <div id="footer_about">
-           <h2>Crypted.</h2>
-           <p>
-              On Crypted, we will teach you all you need to know to get deeply into
-              the world of cryptocurrency. We have pages for beginners and for more
-              experienced users. Anyone can learn new things while navigating our
-              website.
-           </p>
+    </nav>
+    <div class="content">
+      <div class="blog">
+        <div class="blog-header">
+          <h1 id="blog-header-text">Common NFT Terms</h1>
         </div>
-        <div id="footer_NFT">
-           <h2>NFT</h2>
-           <div id="footer_NFT_ul">
-              <ul>
-                 <li><a href="learnnfts.html">Learn NFTs</a></li>
-                 <li><a href="whatarenfts.html">What are NFTs?</a></li>
-                 <li><a href="commonnftterms.html">Common NFT Terms</a></li>
-                 <li><a href="commonnftscams.html">Common NFT Scams</a></li>
-                 <li><a href="thisweekinnfts.html">This Week in NFTs</a></li>
-              </ul>
-           </div>
+        <div id="blog-sharebar">
+          <a> Share: </a>
+          <a href="https://www.facebook.com/" target="_blank">
+            <img src="images/facebooklogo.png" class="small_logo" alt="Facebook Logo">
+          </a>
+          <a href="https://twitter.com/" target="_blank">
+            <img src="images/twitterlogo.png" class="small_logo" alt="Twitter Logo">
+          </a>
+          <a href="https://www.linkedin.com/" target="_blank">
+            <img src="images/linkedin.png" class="small_logo" alt="Linkedin Logo">
+          </a>
+          <a href="https://www.reddit.com/" target="_blank">
+            <img src="images/redditlogo.png" class="small_logo" alt="Reddit Logo">
+          </a>
         </div>
-        <div id="footer_crypto">
-           <h2>Cryptocurrency</h2>
-           <div id="footer_crypto_ul">
-              <ul>
-                 <li><a href="learncrypto.html">Learn Crypto</a></li>
-                 <li><a href="whatarecryptocurrencies.html">What are Cryptocurrencies?</a></li>
-                 <li><a href="commoncryptoterms.html">Common Crypto Terms</a></li>
-                 <li><a href="commoncryptoscams.html">Common Crypto Scams</a></li>
-              </ul>
-           </div>
+        <table class="terms">
+          <tr>
+            <td class="term">Apeing (into something)</td>
+            <td class="definition"> Not affiliated with the Bored Ape Yacht Club or any of the other ape-themed 10k projects, to ‘ape into’ something means buying something in an irresponsible manner, out of FOMO, with too much money relative to your account size, and/or without having done your proper due diligence. </td>
+          </tr>
+          <tr>
+            <td class="term">Diamond hands</td>
+            <td class="definition"> ‘Diamond hands’ is one of the most popular slang terms in the world of crypto and NFTs. It’s become its own meme, its own emoji, and even the theme of whole NFT projects. A person with diamond hands is a person who holds on to an asset through price volatility, negative news, poor market sentiment, and whatever kind of FUD (another abbreviation we’ll cover below) you’ll encounter in this space. Diamond hands can also be used as a verb: “She diamond-handed bitcoin through the 2018 bear market.” </td>
+          </tr>
+          <tr>
+            <td class="term">Floor</td>
+            <td class="definition"> The ‘floor’ or ‘floor price’ of a project is simply the lowest price at which you can buy an NFT from that project on the secondary market. It’s the most popular metric for tracking a project’s performance over time and its relative success compared to others. </td>
+          </tr>
+          <tr>
+            <td class="term">FUD</td>
+            <td class="definition"> ‘FUD’ stands for Fear, Uncertainty, and Doubt. The term is used in crypto and NFTs alike to describe negative news stories, tweets, Discord messages, etc., that are either inaccurate or completely false. You’ll often see people point to FUD as the reason behind large price drops in cryptocurrencies or NFTs. </td>
+          </tr>
+          <tr>
+            <td class="term">Gas war</td>
+            <td class="definition"> Oh, the dreaded gas wars! These are a common occurrence on Ethereum and somewhat of a rite of passage for newcomers. When a popular NFT collection launches, with 100,000 people fighting for 10,000 NFTs, you need to increase your gas fee and outbid the others’ for your transaction to go through. This is what’s known as a gas war. </td>
+          </tr>
+          <tr>
+            <td class="term">OS</td>
+            <td class="definition"> OS is shorthand for OpenSea, the leading NFT marketplace on Ethereum. </td>
+          </tr>
+          <tr>
+            <td class="term">Rugpull</td>
+            <td class="definition"> A ‘rugpull’ is something I hope you’ll never experience! It’s essentially a scam where the people behind a seemingly legit project disappear with all the money immediately after launch. You might get an actual NFT in return for what you paid, but it’s most likely worthless and not even tradeable on a secondary marketplace. Rugpull is often used as a verb as well, as in “I got rugpulled” or simply “I got rugged”. You’ll also see some people on Discord simply writing ‘rug’, often to spread FUD in the community of a specific project. </td>
+          </tr>
+          <tr>
+            <td class="term">(Floor) Sweep</td>
+            <td class="definition"> ‘Sweeping’ is another commonly uttered term because of people’s interest in a project’s ‘floor’. To ‘sweep the floor’ means to buy up a large number of the cheapest NFTs in a collection on the secondary market. Teams sometimes do this, or are asked by the community to do this, for their own projects. Other times it may be done by a single individual, referred to as a ‘whale’. </td>
+          </tr>
+        </table>
+        <a class="definition_source" href="https://techmoneyculture.com/23-nft-terms-you-need-to-know/" target="_blank">Source</a>
+      </div>
+    </div>
+    <footer class="footer">
+      <div id="footer_about">
+        <h2>Crypted.</h2>
+        <p> On Crypted, we will teach you all you need to know to get deeply into the world of cryptocurrency. We have pages for beginners and for more experienced users. Anyone can learn new things while navigating our website. </p>
+      </div>
+      <div id="footer_NFT">
+        <h2>NFT</h2>
+        <div id="footer_NFT_ul">
+          <ul>
+            <li>
+              <a href="learnnfts.html">Learn NFTs</a>
+            </li>
+            <li>
+              <a href="whatarenfts.html">What are NFTs?</a>
+            </li>
+            <li>
+              <a href="commonnftterms.html">Common NFT Terms</a>
+            </li>
+            <li>
+              <a href="commonnftscams.html">Common NFT Scams</a>
+            </li>
+            <li>
+              <a href="thisweekinnfts.html">This Week in NFTs</a>
+            </li>
+          </ul>
         </div>
-        <div id="footer_signup">
-           <h2>Sign up now and get updates from our newsletter.</h2>
-           Our newsletter delivers once a week.<br />
-           <label for="email_input">Your Email:</label>
-           <input class="text_input" type="text" id="email_input" name="fname" /><br /><br />
-           <button onclick="document.getElementById('email_input').value = ''">
-           Submit
-           </button>
+      </div>
+      <div id="footer_crypto">
+        <h2>Cryptocurrency</h2>
+        <div id="footer_crypto_ul">
+          <ul>
+            <li>
+              <a href="learncrypto.html">Learn Crypto</a>
+            </li>
+            <li>
+              <a href="whatarecryptocurrencies.html">What are Cryptocurrencies?</a>
+            </li>
+            <li>
+              <a href="commoncryptoterms.html">Common Crypto Terms</a>
+            </li>
+            <li>
+              <a href="commoncryptoscams.html">Common Crypto Scams</a>
+            </li>
+          </ul>
         </div>
-     </footer>
-   </body>
+      </div>
+      <div id="footer_signup">
+        <h2>Sign up now and get updates from our newsletter.</h2> Our newsletter delivers once a week. <br />
+        <label for="email_input">Your Email:</label>
+        <input class="text_input" type="text" id="email_input" name="fname" />
+        <br />
+        <br />
+        <button onclick="document.getElementById('email_input').value = ''"> Submit </button>
+      </div>
+    </footer>
+  </body>
 </html>
