--- a/contactus.html
+++ b/contactus.html
@@ -1,157 +1,138 @@
 <!DOCTYPE html>
 <html lang="en">
-   <head>
-      <meta charset="UTF-8" />
-      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <link rel="preconnect" href="https://fonts.googleapis.com" />
-      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-      <link
-         href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@200&display=swap"
-         rel="stylesheet"
-         />
-      <link rel="stylesheet" href="main.css" />
-      <link rel="stylesheet" href="contact.css" />
-      <title>Crypted. | Contact Us</title>
-   </head>
-   <body>
-      <nav class="nav">
-         <div class="nav-bar">
-            <div class="nav-left">
-               <div class="brand-name nav-item nav-item-left" onclick="location.href='index.html';">
-                  Crypted.
-               </div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@200&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/contact.css" />
+    <title>Crypted. | Contact Us</title>
+    <link rel="icon" type="image/x-icon" href="images/crypted.ico">
+  </head>
+  <body>
+    <nav class="nav">
+      <div class="nav-bar">
+        <div class="nav-left">
+          <div class="brand-name nav-item nav-item-left" onclick="location.href='index.html';"> Crypted. </div>
+        </div>
+        <div class="nav-right">
+          <div class="nav-item nav-item-right dropdown" onclick="location.href='aboutus.html';"> About Us <div class="dropdown-content">
+              <a href="contactus.html">Contact Us</a>
             </div>
-            <div class="nav-right">
-               <div class="nav-item nav-item-right dropdown" onclick="location.href='aboutus.html';">
-                  About Us
-                  <div class="dropdown-content">
-                     <a href="contactus.html">Contact Us</a>
-                  </div>
-               </div>
-               <div class="nav-item nav-item-right dropdown" onclick="location.href='learnnfts.html';">
-                  Learn NFTs
-                  <div class="dropdown-content">
-                     <a href="whatarenfts.html">What are NFTs?</a>
-                     <a href="commonnftterms.html">Common NFT Terms</a>
-                     <a href="commonnftscams.html">Common NFT Scams</a>
-                     <a href="thisweekinnfts.html">This Week in NFTs</a>
-                  </div>
-               </div>
-               <div class="nav-item nav-item-right dropdown" onclick="location.href='learncrypto.html';">
-                  Learn Crypto
-                  <div class="dropdown-content">
-                     <a href="whatarecryptocurrencies.html">What are Cryptocurrencies?</a>
-                     <a href="commoncryptoterms.html">Common Crypto Terms</a>
-                     <a href="commoncryptoscams.html">Common Crypto Scams</a>
-                  </div>
-               </div>
+          </div>
+          <div class="nav-item nav-item-right dropdown" onclick="location.href='learnnfts.html';"> Learn NFTs <div class="dropdown-content">
+              <a href="whatarenfts.html">What are NFTs?</a>
+              <a href="commonnftterms.html">Common NFT Terms</a>
+              <a href="commonnftscams.html">Common NFT Scams</a>
+              <a href="thisweekinnfts.html">This Week in NFTs</a>
             </div>
-         </div>
-      </nav>
-      <div class="contact-div">
-         <div class="contact">
-            <div class="contact-title">
-               <h1>Contact Us</h1>
-               <h6>Any questions or feedbacks? Just write us a message!</h6>
+          </div>
+          <div class="nav-item nav-item-right dropdown" onclick="location.href='learncrypto.html';"> Learn Crypto <div class="dropdown-content">
+              <a href="whatarecryptocurrencies.html">What are Cryptocurrencies?</a>
+              <a href="commoncryptoterms.html">Common Crypto Terms</a>
+              <a href="commoncryptoscams.html">Common Crypto Scams</a>
             </div>
-            <div class="contact-form">
-               <form action="">
-                  <div class="flex-form">
-                     <div class="form-row">
-                        <div id="first-name">
-                           <label for="fName">First Name</label>
-                           <input
-                              type="text"
-                              name="fname"
-                              id="fname"
-                              placeholder="Alexander"
-                              />
-                        </div>
-                        <div id="last-name">
-                           <label for="lName">Last Name</label>
-                           <input
-                              type="text"
-                              name="lname"
-                              id="lname"
-                              placeholder="McCormick"
-                              />
-                        </div>
-                     </div>
-                     <div class="form-row">
-                        <div id="email">
-                           <label for="email">Email Address</label>
-                           <input
-                              type="email"
-                              name="email"
-                              id="email"
-                              placeholder="123@example.com"
-                              />
-                        </div>
-                     </div>
-                     <div class="form-row">
-                        <div id="message">
-                           <label for="message">Message</label>
-                           <textarea
-                              name=""
-                              id=""
-                              cols="115"
-                              rows="10"
-                              placeholder="Write your message here"
-                              ></textarea>
-                        </div>
-                     </div>
-                     <div class="form-row">
-                        <button type="submit">Send Message</button>
-                        <button type="reset">Clear</button>
-                     </div>
-                  </div>
-               </form>
-            </div>
-         </div>
+          </div>
+        </div>
       </div>
-      <footer class="footer">
-        <div id="footer_about">
-           <h2>Crypted.</h2>
-           <p>
-              On Crypted, we will teach you all you need to know to get deeply into
-              the world of cryptocurrency. We have pages for beginners and for more
-              experienced users. Anyone can learn new things while navigating our
-              website.
-           </p>
+    </nav>
+    <div class="contact-div">
+      <div class="contact">
+        <div class="contact-title">
+          <h1>Contact Us</h1>
+          <h6>Any questions or feedback? Just write us a message!</h6>
         </div>
-        <div id="footer_NFT">
-           <h2>NFT</h2>
-           <div id="footer_NFT_ul">
-              <ul>
-                 <li><a href="learnnfts.html">Learn NFTs</a></li>
-                 <li><a href="whatarenfts.html">What are NFTs?</a></li>
-                 <li><a href="commonnftterms.html">Common NFT Terms</a></li>
-                 <li><a href="commonnftscams.html">Common NFT Scams</a></li>
-                 <li><a href="thisweekinnfts.html">This Week in NFTs</a></li>
-              </ul>
-           </div>
+        <div class="contact-form">
+          <form action="#">
+            <div class="flex-form">
+              <div class="form-row">
+                <div id="first-name">
+                  <label for="fname_input">First Name</label>
+                  <input type="text" name="fname" id="fname_input" placeholder="Alexander" />
+                </div>
+                <div id="last-name">
+                  <label for="lname_input">Last Name</label>
+                  <input type="text" name="lname" id="lname_input" placeholder="McCormick" />
+                </div>
+              </div>
+              <div class="form-row">
+                <div id="email">
+                  <label for="email_in">Email Address</label>
+                  <input type="email" name="email" id="email_in" placeholder="123@example.com" />
+                </div>
+              </div>
+              <div class="form-row">
+                <div id="message">
+                  <label for="message_input">Message</label>
+                  <textarea name="message" id="message_input" cols="115" rows="10" placeholder="Write your message here"></textarea>
+                </div>
+              </div>
+              <div class="form-row">
+                <button type="submit">Send Message</button>
+                <button type="reset">Clear</button>
+              </div>
+            </div>
+          </form>
         </div>
-        <div id="footer_crypto">
-           <h2>Cryptocurrency</h2>
-           <div id="footer_crypto_ul">
-              <ul>
-                 <li><a href="learncrypto.html">Learn Crypto</a></li>
-                 <li><a href="whatarecryptocurrencies.html">What are Cryptocurrencies?</a></li>
-                 <li><a href="commoncryptoterms.html">Common Crypto Terms</a></li>
-                 <li><a href="commoncryptoscams.html">Common Crypto Scams</a></li>
-              </ul>
-           </div>
+      </div>
+    </div>
+    <footer class="footer">
+      <div id="footer_about">
+        <h2>Crypted.</h2>
+        <p> On Crypted, we will teach you all you need to know to get deeply into the world of cryptocurrency. We have pages for beginners and for more experienced users. Anyone can learn new things while navigating our website. </p>
+      </div>
+      <div id="footer_NFT">
+        <h2>NFT</h2>
+        <div id="footer_NFT_ul">
+          <ul>
+            <li>
+              <a href="learnnfts.html">Learn NFTs</a>
+            </li>
+            <li>
+              <a href="whatarenfts.html">What are NFTs?</a>
+            </li>
+            <li>
+              <a href="commonnftterms.html">Common NFT Terms</a>
+            </li>
+            <li>
+              <a href="commonnftscams.html">Common NFT Scams</a>
+            </li>
+            <li>
+              <a href="thisweekinnfts.html">This Week in NFTs</a>
+            </li>
+          </ul>
         </div>
-        <div id="footer_signup">
-           <h2>Sign up now and get updates from our newsletter.</h2>
-           Our newsletter delivers once a week.<br />
-           <label for="email_input">Your Email:</label>
-           <input class="text_input" type="text" id="email_input" name="fname" /><br /><br />
-           <button onclick="document.getElementById('email_input').value = ''">
-           Submit
-           </button>
+      </div>
+      <div id="footer_crypto">
+        <h2>Cryptocurrency</h2>
+        <div id="footer_crypto_ul">
+          <ul>
+            <li>
+              <a href="learncrypto.html">Learn Crypto</a>
+            </li>
+            <li>
+              <a href="whatarecryptocurrencies.html">What are Cryptocurrencies?</a>
+            </li>
+            <li>
+              <a href="commoncryptoterms.html">Common Crypto Terms</a>
+            </li>
+            <li>
+              <a href="commoncryptoscams.html">Common Crypto Scams</a>
+            </li>
+          </ul>
         </div>
-     </footer>
-   </body>
+      </div>
+      <div id="footer_signup">
+        <h2>Sign up now and get updates from our newsletter.</h2> Our newsletter delivers once a week. <br />
+        <label for="email_input">Your Email:</label>
+        <input class="text_input" type="text" id="email_input" name="fname" />
+        <br />
+        <br />
+        <button onclick="document.getElementById('email_input').value = ''"> Submit </button>
+      </div>
+    </footer>
+  </body>
 </html>
