--- a/whatarenfts.html
+++ b/whatarenfts.html
@@ -1,131 +1,128 @@
 <!DOCTYPE html>
 <html lang="en">
-   <head>
-      <meta charset="UTF-8" />
-      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <link rel="preconnect" href="https://fonts.googleapis.com" />
-      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-      <link
-         href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@200&display=swap"
-         rel="stylesheet"
-         />
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-      <link rel="stylesheet" href="main.css" />
-      <link rel="stylesheet" href="whatare.css" />
-      <link rel="stylesheet" href="blog.css" />
-      <title>Crypted.</title>
-   </head>
-   <body>
-      <nav class="nav">
-         <div class="nav-bar">
-            <div class="nav-left">
-               <div class="brand-name nav-item nav-item-left" onclick="location.href='index.html';">
-                  Crypted.
-               </div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@200&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/whatare.css" />
+    <link rel="stylesheet" href="css/blog.css" />
+    <title>Crypted. | What are NFTs?</title>
+    <link rel="icon" type="image/x-icon" href="images/crypted.ico">
+  </head>
+  <body>
+    <nav class="nav">
+      <div class="nav-bar">
+        <div class="nav-left">
+          <div class="brand-name nav-item nav-item-left" onclick="location.href='index.html';"> Crypted. </div>
+        </div>
+        <div class="nav-right">
+          <div class="nav-item nav-item-right dropdown" onclick="location.href='aboutus.html';"> About Us <div class="dropdown-content">
+              <a href="contactus.html">Contact Us</a>
             </div>
-            <div class="nav-right">
-               <div class="nav-item nav-item-right dropdown" onclick="location.href='aboutus.html';">
-                  About Us
-                  <div class="dropdown-content">
-                     <a href="contactus.html">Contact Us</a>
-                  </div>
-               </div>
-               <div class="nav-item nav-item-right dropdown" onclick="location.href='learnnfts.html';">
-                  Learn NFTs
-                  <div class="dropdown-content">
-                     <a href="whatarenfts.html">What are NFTs?</a>
-                     <a href="commonnftterms.html">Common NFT Terms</a>
-                     <a href="commonnftscams.html">Common NFT Scams</a>
-                     <a href="thisweekinnfts.html">This Week in NFTs</a>
-                  </div>
-               </div>
-               <div class="nav-item nav-item-right dropdown" onclick="location.href='learncrypto.html';">
-                  Learn Crypto
-                  <div class="dropdown-content">
-                     <a href="whatarecryptocurrencies.html">What are Cryptocurrencies?</a>
-                     <a href="commoncryptoterms.html">Common Crypto Terms</a>
-                     <a href="commoncryptoscams.html">Common Crypto Scams</a>
-                  </div>
-               </div>
+          </div>
+          <div class="nav-item nav-item-right dropdown" onclick="location.href='learnnfts.html';"> Learn NFTs <div class="dropdown-content">
+              <a href="whatarenfts.html">What are NFTs?</a>
+              <a href="commonnftterms.html">Common NFT Terms</a>
+              <a href="commonnftscams.html">Common NFT Scams</a>
+              <a href="thisweekinnfts.html">This Week in NFTs</a>
             </div>
-         </div>
-      </nav>
-      <div class="content">
-         <div class="blog">
-            <div class="blog-header">
-               <h1 id="blog-header-text">What are NFTs?</h1>
+          </div>
+          <div class="nav-item nav-item-right dropdown" onclick="location.href='learncrypto.html';"> Learn Crypto <div class="dropdown-content">
+              <a href="whatarecryptocurrencies.html">What are Cryptocurrencies?</a>
+              <a href="commoncryptoterms.html">Common Crypto Terms</a>
+              <a href="commoncryptoscams.html">Common Crypto Scams</a>
             </div>
-            <div id="blog-sharebar">
-               <a> Share: </a>
-               <a href="https://www.facebook.com/" target="_blank" class="fa fa-facebook"></a>
-               <a href="https://twitter.com/" target="_blank" class="fa fa-twitter"></a>
-               <a href="https://www.linkedin.com/" target="_blank" class="fa fa-linkedin"></a>
-               <a href="https://www.reddit.com/" target="_blank" class="fa fa-reddit"></a>
-            </div>
-            <div class="whataretext">
-               <img src="images/bitcoin.png"/>
-               <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Nisi est sit amet facilisis magna etiam tempor. Senectus et netus et malesuada fames. Sit amet massa vitae tortor condimentum lacinia quis vel eros. Phasellus egestas tellus rutrum tellus. Ullamcorper sit amet risus nullam eget felis eget nunc lobortis. Enim sit amet venenatis urna cursus eget nunc scelerisque viverra. Sit amet nisl suscipit adipiscing. Faucibus interdum posuere lorem ipsum dolor sit amet. Bibendum enim facilisis gravida neque convallis a cras. Placerat in egestas erat imperdiet sed euismod nisi. Cursus metus aliquam eleifend mi in nulla. Egestas diam in arcu cursus euismod quis viverra nibh cras. Pharetra diam sit amet nisl suscipit.
-               </p>
-               <p>
-                  Arcu non sodales neque sodales. Nunc consequat interdum varius sit amet mattis vulputate enim. Sagittis purus sit amet volutpat consequat mauris nunc congue nisi. Ac turpis egestas sed tempus urna. In tellus integer feugiat scelerisque varius morbi enim nunc faucibus. Tincidunt arcu non sodales neque. Lectus mauris ultrices eros in cursus turpis. Arcu dictum varius duis at consectetur lorem. Diam quis enim lobortis scelerisque fermentum dui. Vehicula ipsum a arcu cursus vitae congue mauris rhoncus. Ut lectus arcu bibendum at varius vel pharetra.
-               </p>
-               <img src="images/bitcoin.png"/>
-               <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Viverra orci sagittis eu volutpat odio facilisis mauris. Sollicitudin nibh sit amet commodo nulla facilisi nullam. Elit ut aliquam purus sit amet luctus venenatis lectus magna. Mauris pharetra et ultrices neque ornare aenean euismod. Suspendisse potenti nullam ac tortor vitae. Lacinia at quis risus sed vulputate odio ut. Id semper risus in hendrerit gravida rutrum quisque. Fermentum dui faucibus in ornare quam viverra orci sagittis. Ultricies tristique nulla aliquet enim tortor at auctor urna nunc. Malesuada proin libero nunc consequat interdum varius sit. Pretium nibh ipsum consequat nisl vel pretium lectus quam. Mi quis hendrerit dolor magna. Porta non pulvinar neque laoreet suspendisse interdum consectetur. Congue mauris rhoncus aenean vel elit scelerisque mauris pellentesque. In nulla posuere sollicitudin aliquam ultrices sagittis orci a scelerisque. Elit eget gravida cum sociis natoque. Velit egestas dui id ornare arcu odio ut. Neque ornare aenean euismod elementum nisi quis eleifend quam.
-               </p>
-               <p>
-                  Platea dictumst vestibulum rhoncus est pellentesque elit ullamcorper. Nibh ipsum consequat nisl vel pretium lectus quam id. Sit amet consectetur adipiscing elit pellentesque habitant. Scelerisque eu ultrices vitae auctor eu augue ut. Ultrices neque ornare aenean euismod elementum nisi quis eleifend. Lacus viverra vitae congue eu consequat ac felis donec. Tellus integer feugiat scelerisque varius morbi enim nunc faucibus a. Ut sem viverra aliquet eget sit amet tellus cras. Enim ut tellus elementum sagittis. Ultricies tristique nulla aliquet enim tortor at auctor urna nunc. Tristique senectus et netus et malesuada fames. Diam vulputate ut pharetra sit amet aliquam id diam maecenas. A scelerisque purus semper eget duis at tellus. Non blandit massa enim nec dui. Arcu ac tortor dignissim convallis aenean et. Tempus urna et pharetra pharetra massa massa ultricies mi. Odio pellentesque diam volutpat commodo sed egestas egestas. Nulla facilisi nullam vehicula ipsum.
-               </p>
-               <p>
-                  Quis auctor elit sed vulputate mi. Quis varius quam quisque id diam vel quam elementum pulvinar. Gravida neque convallis a cras semper auctor neque. Enim neque volutpat ac tincidunt vitae semper quis. Placerat vestibulum lectus mauris ultrices. Enim nulla aliquet porttitor lacus luctus accumsan tortor. Vitae tortor condimentum lacinia quis. Ante in nibh mauris cursus mattis molestie. Magna sit amet purus gravida quis blandit. Id semper risus in hendrerit. Amet justo donec enim diam. Ultrices vitae auctor eu augue. Dolor sed viverra ipsum nunc. Vel elit scelerisque mauris pellentesque pulvinar. Praesent elementum facilisis leo vel fringilla est. Pellentesque dignissim enim sit amet venenatis urna cursus eget. Pellentesque eu tincidunt tortor aliquam nulla facilisi cras. Sed enim ut sem viverra. At volutpat diam ut venenatis tellus.
-               </p>
-            </div>
-         </div>
+          </div>
+        </div>
       </div>
-      <footer class="footer">
-        <div id="footer_about">
-           <h2>Crypted.</h2>
-           <p>
-              On Crypted, we will teach you all you need to know to get deeply into
-              the world of cryptocurrency. We have pages for beginners and for more
-              experienced users. Anyone can learn new things while navigating our
-              website.
-           </p>
+    </nav>
+    <div class="content">
+      <div class="blog">
+        <div class="blog-header">
+          <h1 id="blog-header-text">What are NFTs?</h1>
         </div>
-        <div id="footer_NFT">
-           <h2>NFT</h2>
-           <div id="footer_NFT_ul">
-              <ul>
-                 <li><a href="learnnfts.html">Learn NFTs</a></li>
-                 <li><a href="whatarenfts.html">What are NFTs?</a></li>
-                 <li><a href="commonnftterms.html">Common NFT Terms</a></li>
-                 <li><a href="commonnftscams.html">Common NFT Scams</a></li>
-                 <li><a href="thisweekinnfts.html">This Week in NFTs</a></li>
-              </ul>
-           </div>
+        <div id="blog-sharebar">
+          <a> Share: </a>
+          <a href="https://www.facebook.com/" target="_blank">
+            <img src="images/facebooklogo.png" class="small_logo" alt="Facebook Logo">
+          </a>
+          <a href="https://twitter.com/" target="_blank">
+            <img src="images/twitterlogo.png" class="small_logo" alt="Twitter Logo">
+          </a>
+          <a href="https://www.linkedin.com/" target="_blank">
+            <img src="images/linkedin.png" class="small_logo" alt="Linkedin Logo">
+          </a>
+          <a href="https://www.reddit.com/" target="_blank">
+            <img src="images/redditlogo.png" class="small_logo" alt="Reddit Logo">
+          </a>
         </div>
-        <div id="footer_crypto">
-           <h2>Cryptocurrency</h2>
-           <div id="footer_crypto_ul">
-              <ul>
-                 <li><a href="learncrypto.html">Learn Crypto</a></li>
-                 <li><a href="whatarecryptocurrencies.html">What are Cryptocurrencies?</a></li>
-                 <li><a href="commoncryptoterms.html">Common Crypto Terms</a></li>
-                 <li><a href="commoncryptoscams.html">Common Crypto Scams</a></li>
-              </ul>
-           </div>
+        <div class="whataretext">
+          <img src="images/nfts.jpg" alt="A sample image of many Bored Ape Yacht Clubs and Cryptopunk NFTs" />
+          <p> A non-fungible token (NFT) is a non-interchangeable unit of data stored on a blockchain, a form of digital ledger, that can be sold and traded. Types of NFT data units may be associated with digital files such as photos, videos, and audio. Because each token is uniquely identifiable, NFTs differ from blockchain cryptocurrencies, such as Bitcoin. </p>
+          <p> NFT ledgers claim to provide a public certificate of authenticity or proof of ownership, but the legal rights conveyed by an NFT can be uncertain. NFTs do not restrict the sharing or copying of the underlying digital files, do not necessarily convey the copyright of the digital files, and do not prevent the creation of NFTs with identical associated files. </p>
+          <p> NFTs have been used as a speculative asset, and they have drawn increasing criticism for the energy cost and carbon footprint associated with validating blockchain transactions as well as their frequent use in art scams. The NFT market has been compared to a Ponzi scheme. </p>
         </div>
-        <div id="footer_signup">
-           <h2>Sign up now and get updates from our newsletter.</h2>
-           Our newsletter delivers once a week.<br />
-           <label for="email_input">Your Email:</label>
-           <input class="text_input" type="text" id="email_input" name="fname" /><br /><br />
-           <button onclick="document.getElementById('email_input').value = ''">
-           Submit
-           </button>
+        <a class="definition_source" href="https://en.wikipedia.org/wiki/Non-fungible_token" target="_blank">Source</a>
+      </div>
+    </div>
+    <footer class="footer">
+      <div id="footer_about">
+        <h2>Crypted.</h2>
+        <p> On Crypted, we will teach you all you need to know to get deeply into the world of cryptocurrency. We have pages for beginners and for more experienced users. Anyone can learn new things while navigating our website. </p>
+      </div>
+      <div id="footer_NFT">
+        <h2>NFT</h2>
+        <div id="footer_NFT_ul">
+          <ul>
+            <li>
+              <a href="learnnfts.html">Learn NFTs</a>
+            </li>
+            <li>
+              <a href="whatarenfts.html">What are NFTs?</a>
+            </li>
+            <li>
+              <a href="commonnftterms.html">Common NFT Terms</a>
+            </li>
+            <li>
+              <a href="commonnftscams.html">Common NFT Scams</a>
+            </li>
+            <li>
+              <a href="thisweekinnfts.html">This Week in NFTs</a>
+            </li>
+          </ul>
         </div>
-     </footer>
-   </body>
+      </div>
+      <div id="footer_crypto">
+        <h2>Cryptocurrency</h2>
+        <div id="footer_crypto_ul">
+          <ul>
+            <li>
+              <a href="learncrypto.html">Learn Crypto</a>
+            </li>
+            <li>
+              <a href="whatarecryptocurrencies.html">What are Cryptocurrencies?</a>
+            </li>
+            <li>
+              <a href="commoncryptoterms.html">Common Crypto Terms</a>
+            </li>
+            <li>
+              <a href="commoncryptoscams.html">Common Crypto Scams</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div id="footer_signup">
+        <h2>Sign up now and get updates from our newsletter.</h2> Our newsletter delivers once a week. <br />
+        <label for="email_input">Your Email:</label>
+        <input class="text_input" type="text" id="email_input" name="fname" />
+        <br />
+        <br />
+        <button onclick="document.getElementById('email_input').value = ''"> Submit </button>
+      </div>
+    </footer>
+  </body>
 </html>
