--- a/learncrypto.html
+++ b/learncrypto.html
@@ -1,131 +1,140 @@
 <!DOCTYPE html>
 <html lang="en">
-   <head>
-      <meta charset="UTF-8" />
-      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <link rel="preconnect" href="https://fonts.googleapis.com" />
-      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-      <link
-         href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@200&display=swap"
-         rel="stylesheet"
-         />
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-      <link rel="stylesheet" href="main.css" />
-      <link rel="stylesheet" href="learn.css" />
-      <link rel="stylesheet" href="blog.css" />
-      <title>Crypted.</title>
-   </head>
-   <body>
-      <nav class="nav">
-         <div class="nav-bar">
-            <div class="nav-left">
-               <div class="brand-name nav-item nav-item-left" onclick="location.href='index.html';">
-                  Crypted.
-               </div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@200&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/learn.css" />
+    <link rel="stylesheet" href="css/blog.css" />
+    <title>Crypted. | Learn Crypto</title>
+    <link rel="icon" type="image/x-icon" href="images/crypted.ico">
+  </head>
+  <body>
+    <nav class="nav">
+      <div class="nav-bar">
+        <div class="nav-left">
+          <div class="brand-name nav-item nav-item-left" onclick="location.href='index.html';"> Crypted. </div>
+        </div>
+        <div class="nav-right">
+          <div class="nav-item nav-item-right dropdown" onclick="location.href='aboutus.html';"> About Us <div class="dropdown-content">
+              <a href="contactus.html">Contact Us</a>
             </div>
-            <div class="nav-right">
-               <div class="nav-item nav-item-right dropdown" onclick="location.href='aboutus.html';">
-                  About Us
-                  <div class="dropdown-content">
-                     <a href="contactus.html">Contact Us</a>
-                  </div>
-               </div>
-               <div class="nav-item nav-item-right dropdown" onclick="location.href='learnnfts.html';">
-                  Learn NFTs
-                  <div class="dropdown-content">
-                     <a href="whatarenfts.html">What are NFTs?</a>
-                     <a href="commonnftterms.html">Common NFT Terms</a>
-                     <a href="commonnftscams.html">Common NFT Scams</a>
-                     <a href="thisweekinnfts.html">This Week in NFTs</a>
-                  </div>
-               </div>
-               <div class="nav-item nav-item-right dropdown" onclick="location.href='learncrypto.html';">
-                  Learn Crypto
-                  <div class="dropdown-content">
-                     <a href="whatarecryptocurrencies.html">What are Cryptocurrencies?</a>
-                     <a href="commoncryptoterms.html">Common Crypto Terms</a>
-                     <a href="commoncryptoscams.html">Common Crypto Scams</a>
-                  </div>
-               </div>
+          </div>
+          <div class="nav-item nav-item-right dropdown" onclick="location.href='learnnfts.html';"> Learn NFTs <div class="dropdown-content">
+              <a href="whatarenfts.html">What are NFTs?</a>
+              <a href="commonnftterms.html">Common NFT Terms</a>
+              <a href="commonnftscams.html">Common NFT Scams</a>
+              <a href="thisweekinnfts.html">This Week in NFTs</a>
             </div>
-         </div>
-      </nav>
-      <div class="content">
-         <div class="blog">
-            <div id="blog-sharebar">
-               <a> Share: </a>
-               <a href="https://www.facebook.com/" target="_blank" class="fa fa-facebook"></a>
-               <a href="https://twitter.com/" target="_blank" class="fa fa-twitter"></a>
-               <a href="https://www.linkedin.com/" target="_blank" class="fa fa-linkedin"></a>
-               <a href="https://www.reddit.com/" target="_blank" class="fa fa-reddit"></a>
+          </div>
+          <div class="nav-item nav-item-right dropdown" onclick="location.href='learncrypto.html';"> Learn Crypto <div class="dropdown-content">
+              <a href="whatarecryptocurrencies.html">What are Cryptocurrencies?</a>
+              <a href="commoncryptoterms.html">Common Crypto Terms</a>
+              <a href="commoncryptoscams.html">Common Crypto Scams</a>
             </div>
-            <div class="topic_information">
-               <h1>Let's Learn About Crypto!</h1>
-               <a>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</a>
-            </div>
-            <hr class="colored_hr">
-            <div class="learn_list">
-               <div class="learn_preview"  onclick="location.href='whatarenfts.html';">
-                  <img src="images/bitcoin.png">
-                  <h1>What are Cryptocurrencies?</h1>
-                  <a>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</a>
-               </div>
-               <div class="learn_preview"  onclick="location.href='commonnftterms.html';">
-                  <img src="images/bitcoin.png">
-                  <h1>Common Crypto Terms</h1>
-                  <a>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</a>
-               </div>
-               <div class="learn_preview"  onclick="location.href='commonnftscams.html';">
-                  <img src="images/bitcoin.png">
-                  <h1>Common Crypto Scams</h1>
-                  <a>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</a>
-               </div>
-            </div>
-         </div>
+          </div>
+        </div>
       </div>
-      <footer class="footer">
-        <div id="footer_about">
-           <h2>Crypted.</h2>
-           <p>
-              On Crypted, we will teach you all you need to know to get deeply into
-              the world of cryptocurrency. We have pages for beginners and for more
-              experienced users. Anyone can learn new things while navigating our
-              website.
-           </p>
+    </nav>
+    <div class="content">
+      <div class="blog">
+        <div id="blog-sharebar">
+          <a> Share: </a>
+          <a href="https://www.facebook.com/" target="_blank">
+            <img src="images/facebooklogo.png" class="small_logo" alt="Facebook Logo">
+          </a>
+          <a href="https://twitter.com/" target="_blank">
+            <img src="images/twitterlogo.png" class="small_logo" alt="Twitter Logo">
+          </a>
+          <a href="https://www.linkedin.com/" target="_blank">
+            <img src="images/linkedin.png" class="small_logo" alt="Linkedin Logo">
+          </a>
+          <a href="https://www.reddit.com/" target="_blank">
+            <img src="images/redditlogo.png" class="small_logo" alt="Reddit Logo">
+          </a>
         </div>
-        <div id="footer_NFT">
-           <h2>NFT</h2>
-           <div id="footer_NFT_ul">
-              <ul>
-                 <li><a href="learnnfts.html">Learn NFTs</a></li>
-                 <li><a href="whatarenfts.html">What are NFTs?</a></li>
-                 <li><a href="commonnftterms.html">Common NFT Terms</a></li>
-                 <li><a href="commonnftscams.html">Common NFT Scams</a></li>
-                 <li><a href="thisweekinnfts.html">This Week in NFTs</a></li>
-              </ul>
-           </div>
+        <div class="topic_information">
+          <h1>Let's Learn About Crypto!</h1>
+          <a> You've come to the right place if your goal is to get fully immersed into the cryptocurrency space. View and click the boxes below to view in depth writing and knowledge provided by our team. </a>
         </div>
-        <div id="footer_crypto">
-           <h2>Cryptocurrency</h2>
-           <div id="footer_crypto_ul">
-              <ul>
-                 <li><a href="learncrypto.html">Learn Crypto</a></li>
-                 <li><a href="whatarecryptocurrencies.html">What are Cryptocurrencies?</a></li>
-                 <li><a href="commoncryptoterms.html">Common Crypto Terms</a></li>
-                 <li><a href="commoncryptoscams.html">Common Crypto Scams</a></li>
-              </ul>
-           </div>
+        <hr class="colored_hr">
+        <div class="learn_list">
+          <div class="learn_preview" onclick="location.href='whatarenfts.html';">
+            <img src="images/bitcoin.png" alt="The bitcoin logo">
+            <h1>What are Cryptocurrencies?</h1>
+            <a> The word "cryptocurrencies" has evolved greatly in the last 5 years and he entire cryptocurrency space has grown and expanded. Let's get a solid definition established so you know what you're getting started in. </a>
+          </div>
+          <div class="learn_preview" onclick="location.href='commonnftterms.html';">
+            <img src="images/cryptoslang.png" alt="Some example crypto slang being said by a drawn man">
+            <h1>Common Crypto Terms</h1>
+            <a> Cryptocurrency culture has many new terms and slang you'll need to pick up on to be successful. Click here to get some good starting terms. </a>
+          </div>
+          <div class="learn_preview" onclick="location.href='commonnftscams.html';">
+            <img src="images/scam.jpg" alt="A bunch of roadsigns saying SCAM on them">
+            <h1>Common Crypto Scams</h1>
+            <a> Cryptocurrency scams are some of the most popular scams on the internet nowadays due to the nature of blockchains. You need to be prepared for anything. Let's get you ready to face the wild west of the internet. </a>
+          </div>
         </div>
-        <div id="footer_signup">
-           <h2>Sign up now and get updates from our newsletter.</h2>
-           Our newsletter delivers once a week.<br />
-           <label for="email_input">Your Email:</label>
-           <input class="text_input" type="text" id="email_input" name="fname" /><br /><br />
-           <button onclick="document.getElementById('email_input').value = ''">
-           Submit
-           </button>
+      </div>
+    </div>
+    <footer class="footer">
+      <div id="footer_about">
+        <h2>Crypted.</h2>
+        <p> On Crypted, we will teach you all you need to know to get deeply into the world of cryptocurrency. We have pages for beginners and for more experienced users. Anyone can learn new things while navigating our website. </p>
+      </div>
+      <div id="footer_NFT">
+        <h2>NFT</h2>
+        <div id="footer_NFT_ul">
+          <ul>
+            <li>
+              <a href="learnnfts.html">Learn NFTs</a>
+            </li>
+            <li>
+              <a href="whatarenfts.html">What are NFTs?</a>
+            </li>
+            <li>
+              <a href="commonnftterms.html">Common NFT Terms</a>
+            </li>
+            <li>
+              <a href="commonnftscams.html">Common NFT Scams</a>
+            </li>
+            <li>
+              <a href="thisweekinnfts.html">This Week in NFTs</a>
+            </li>
+          </ul>
         </div>
-     </footer>
-   </body>
+      </div>
+      <div id="footer_crypto">
+        <h2>Cryptocurrency</h2>
+        <div id="footer_crypto_ul">
+          <ul>
+            <li>
+              <a href="learncrypto.html">Learn Crypto</a>
+            </li>
+            <li>
+              <a href="whatarecryptocurrencies.html">What are Cryptocurrencies?</a>
+            </li>
+            <li>
+              <a href="commoncryptoterms.html">Common Crypto Terms</a>
+            </li>
+            <li>
+              <a href="commoncryptoscams.html">Common Crypto Scams</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div id="footer_signup">
+        <h2>Sign up now and get updates from our newsletter.</h2> Our newsletter delivers once a week. <br />
+        <label for="email_input">Your Email:</label>
+        <input class="text_input" type="text" id="email_input" name="fname" />
+        <br />
+        <br />
+        <button onclick="document.getElementById('email_input').value = ''"> Submit </button>
+      </div>
+    </footer>
+  </body>
 </html>
